// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading Heading component using <Text> component properties 1`] = `
.c0 {
  font-size: 24px;
  color: #596b7d;
  text-align: center;
}

<h3
  className="c0"
  color="#596b7d"
  fontSize={24}
/>
`;

exports[`Heading Heading component with default theme font size, when "fontSize" prop not used 1`] = `
.c0 {
  font-size: 24px;
}

<h3
  className="c0"
  fontSize={24}
/>
`;

exports[`Heading Heading component with h1-h6 dot-notation 1`] = `
.c0 {
  font-size: 48px;
}

<h1
  className="c0"
  fontSize={48}
/>
`;

exports[`Heading Heading component with h1-h6 dot-notation 2`] = `
.c0 {
  font-size: 32px;
}

<h2
  className="c0"
  fontSize={32}
/>
`;

exports[`Heading Heading component with h1-h6 dot-notation 3`] = `
.c0 {
  font-size: 24px;
}

<h3
  className="c0"
  fontSize={24}
/>
`;

exports[`Heading Heading component with h1-h6 dot-notation 4`] = `
.c0 {
  font-size: 20px;
}

<h4
  className="c0"
  fontSize={20}
/>
`;

exports[`Heading Heading component with h1-h6 dot-notation 5`] = `
.c0 {
  font-size: 16px;
}

<h5
  className="c0"
  fontSize={16}
/>
`;

exports[`Heading Heading component with h1-h6 dot-notation 6`] = `
.c0 {
  font-size: 14px;
}

<h6
  className="c0"
  fontSize={14}
/>
`;

exports[`Heading renders 1`] = `
.c0 {
  font-size: 24px;
}

<h3
  className="c0"
  fontSize={24}
/>
`;
